[package]
name = "icondata_lu"
version = "0.0.8"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Library providing SVG and corresponding metadata for \"Lucide\"."
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]

[dependencies]
icondata_core = "0.0.2"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }

[features]
LuAccessibility = []
LuActivity = []
LuActivitySquare = []
LuAirVent = []
LuAirplay = []
LuAlarmCheck = []
LuAlarmClock = []
LuAlarmClockOff = []
LuAlarmMinus = []
LuAlarmPlus = []
LuAlbum = []
LuAlertCircle = []
LuAlertOctagon = []
LuAlertTriangle = []
LuAlignCenter = []
LuAlignCenterHorizontal = []
LuAlignCenterVertical = []
LuAlignEndHorizontal = []
LuAlignEndVertical = []
LuAlignHorizontalDistributeCenter = []
LuAlignHorizontalDistributeEnd = []
LuAlignHorizontalDistributeStart = []
LuAlignHorizontalJustifyCenter = []
LuAlignHorizontalJustifyEnd = []
LuAlignHorizontalJustifyStart = []
LuAlignHorizontalSpaceAround = []
LuAlignHorizontalSpaceBetween = []
LuAlignJustify = []
LuAlignLeft = []
LuAlignRight = []
LuAlignStartHorizontal = []
LuAlignStartVertical = []
LuAlignVerticalDistributeCenter = []
LuAlignVerticalDistributeEnd = []
LuAlignVerticalDistributeStart = []
LuAlignVerticalJustifyCenter = []
LuAlignVerticalJustifyEnd = []
LuAlignVerticalJustifyStart = []
LuAlignVerticalSpaceAround = []
LuAlignVerticalSpaceBetween = []
LuAmpersand = []
LuAmpersands = []
LuAnchor = []
LuAngry = []
LuAnnoyed = []
LuAntenna = []
LuAperture = []
LuAppWindow = []
LuApple = []
LuArchive = []
LuArchiveRestore = []
LuAreaChart = []
LuArmchair = []
LuArrowBigDown = []
LuArrowBigDownDash = []
LuArrowBigLeft = []
LuArrowBigLeftDash = []
LuArrowBigRight = []
LuArrowBigRightDash = []
LuArrowBigUp = []
LuArrowBigUpDash = []
LuArrowDown = []
LuArrowDown01 = []
LuArrowDown10 = []
LuArrowDownAZ = []
LuArrowDownCircle = []
LuArrowDownFromLine = []
LuArrowDownLeft = []
LuArrowDownLeftFromCircle = []
LuArrowDownLeftSquare = []
LuArrowDownNarrowWide = []
LuArrowDownRight = []
LuArrowDownRightFromCircle = []
LuArrowDownRightSquare = []
LuArrowDownSquare = []
LuArrowDownToDot = []
LuArrowDownToLine = []
LuArrowDownUp = []
LuArrowDownWideNarrow = []
LuArrowDownZA = []
LuArrowLeft = []
LuArrowLeftCircle = []
LuArrowLeftFromLine = []
LuArrowLeftRight = []
LuArrowLeftSquare = []
LuArrowLeftToLine = []
LuArrowRight = []
LuArrowRightCircle = []
LuArrowRightFromLine = []
LuArrowRightLeft = []
LuArrowRightSquare = []
LuArrowRightToLine = []
LuArrowUp = []
LuArrowUp01 = []
LuArrowUp10 = []
LuArrowUpAZ = []
LuArrowUpCircle = []
LuArrowUpDown = []
LuArrowUpFromDot = []
LuArrowUpFromLine = []
LuArrowUpLeft = []
LuArrowUpLeftFromCircle = []
LuArrowUpLeftSquare = []
LuArrowUpNarrowWide = []
LuArrowUpRight = []
LuArrowUpRightFromCircle = []
LuArrowUpRightSquare = []
LuArrowUpSquare = []
LuArrowUpToLine = []
LuArrowUpWideNarrow = []
LuArrowUpZA = []
LuArrowsUpFromLine = []
LuAsterisk = []
LuAtSign = []
LuAtom = []
LuAward = []
LuAxe = []
LuAxis3d = []
LuBaby = []
LuBackpack = []
LuBadge = []
LuBadgeAlert = []
LuBadgeCheck = []
LuBadgeDollarSign = []
LuBadgeHelp = []
LuBadgeInfo = []
LuBadgeMinus = []
LuBadgePercent = []
LuBadgePlus = []
LuBadgeX = []
LuBaggageClaim = []
LuBan = []
LuBanana = []
LuBanknote = []
LuBarChart = []
LuBarChart2 = []
LuBarChart3 = []
LuBarChart4 = []
LuBarChartBig = []
LuBarChartHorizontal = []
LuBarChartHorizontalBig = []
LuBaseline = []
LuBath = []
LuBattery = []
LuBatteryCharging = []
LuBatteryFull = []
LuBatteryLow = []
LuBatteryMedium = []
LuBatteryWarning = []
LuBeaker = []
LuBean = []
LuBeanOff = []
LuBed = []
LuBedDouble = []
LuBedSingle = []
LuBeef = []
LuBeer = []
LuBell = []
LuBellDot = []
LuBellMinus = []
LuBellOff = []
LuBellPlus = []
LuBellRing = []
LuBike = []
LuBinary = []
LuBiohazard = []
LuBird = []
LuBitcoin = []
LuBlinds = []
LuBlocks = []
LuBluetooth = []
LuBluetoothConnected = []
LuBluetoothOff = []
LuBluetoothSearching = []
LuBold = []
LuBomb = []
LuBone = []
LuBook = []
LuBookCopy = []
LuBookDown = []
LuBookKey = []
LuBookLock = []
LuBookMarked = []
LuBookMinus = []
LuBookOpen = []
LuBookOpenCheck = []
LuBookPlus = []
LuBookTemplate = []
LuBookUp = []
LuBookUp2 = []
LuBookX = []
LuBookmark = []
LuBookmarkMinus = []
LuBookmarkPlus = []
LuBoomBox = []
LuBot = []
LuBox = []
LuBoxSelect = []
LuBoxes = []
LuBraces = []
LuBrackets = []
LuBrain = []
LuBrainCircuit = []
LuBrainCog = []
LuBriefcase = []
LuBringToFront = []
LuBrush = []
LuBug = []
LuBuilding = []
LuBuilding2 = []
LuBus = []
LuBusFront = []
LuCable = []
LuCableCar = []
LuCake = []
LuCakeSlice = []
LuCalculator = []
LuCalendar = []
LuCalendarCheck = []
LuCalendarCheck2 = []
LuCalendarClock = []
LuCalendarDays = []
LuCalendarHeart = []
LuCalendarMinus = []
LuCalendarOff = []
LuCalendarPlus = []
LuCalendarRange = []
LuCalendarSearch = []
LuCalendarX = []
LuCalendarX2 = []
LuCamera = []
LuCameraOff = []
LuCandlestickChart = []
LuCandy = []
LuCandyCane = []
LuCandyOff = []
LuCar = []
LuCarFront = []
LuCarTaxiFront = []
LuCarrot = []
LuCaseLower = []
LuCaseSensitive = []
LuCaseUpper = []
LuCassetteTape = []
LuCast = []
LuCastle = []
LuCat = []
LuCheck = []
LuCheckCheck = []
LuCheckCircle = []
LuCheckCircle2 = []
LuCheckSquare = []
LuChefHat = []
LuCherry = []
LuChevronDown = []
LuChevronDownCircle = []
LuChevronDownSquare = []
LuChevronFirst = []
LuChevronLast = []
LuChevronLeft = []
LuChevronLeftCircle = []
LuChevronLeftSquare = []
LuChevronRight = []
LuChevronRightCircle = []
LuChevronRightSquare = []
LuChevronUp = []
LuChevronUpCircle = []
LuChevronUpSquare = []
LuChevronsDown = []
LuChevronsDownUp = []
LuChevronsLeft = []
LuChevronsLeftRight = []
LuChevronsRight = []
LuChevronsRightLeft = []
LuChevronsUp = []
LuChevronsUpDown = []
LuChrome = []
LuChurch = []
LuCigarette = []
LuCigaretteOff = []
LuCircle = []
LuCircleDashed = []
LuCircleDollarSign = []
LuCircleDot = []
LuCircleDotDashed = []
LuCircleEllipsis = []
LuCircleEqual = []
LuCircleOff = []
LuCircleSlash = []
LuCircleSlash2 = []
LuCircuitBoard = []
LuCitrus = []
LuClapperboard = []
LuClipboard = []
LuClipboardCheck = []
LuClipboardCopy = []
LuClipboardEdit = []
LuClipboardList = []
LuClipboardPaste = []
LuClipboardSignature = []
LuClipboardType = []
LuClipboardX = []
LuClock = []
LuClock1 = []
LuClock10 = []
LuClock11 = []
LuClock12 = []
LuClock2 = []
LuClock3 = []
LuClock4 = []
LuClock5 = []
LuClock6 = []
LuClock7 = []
LuClock8 = []
LuClock9 = []
LuCloud = []
LuCloudCog = []
LuCloudDrizzle = []
LuCloudFog = []
LuCloudHail = []
LuCloudLightning = []
LuCloudMoon = []
LuCloudMoonRain = []
LuCloudOff = []
LuCloudRain = []
LuCloudRainWind = []
LuCloudSnow = []
LuCloudSun = []
LuCloudSunRain = []
LuCloudy = []
LuClover = []
LuClub = []
LuCode = []
LuCode2 = []
LuCodepen = []
LuCodesandbox = []
LuCoffee = []
LuCog = []
LuCoins = []
LuColumns = []
LuCombine = []
LuCommand = []
LuCompass = []
LuComponent = []
LuComputer = []
LuConciergeBell = []
LuConstruction = []
LuContact = []
LuContact2 = []
LuContainer = []
LuContrast = []
LuCookie = []
LuCopy = []
LuCopyCheck = []
LuCopyMinus = []
LuCopyPlus = []
LuCopySlash = []
LuCopyX = []
LuCopyleft = []
LuCopyright = []
LuCornerDownLeft = []
LuCornerDownRight = []
LuCornerLeftDown = []
LuCornerLeftUp = []
LuCornerRightDown = []
LuCornerRightUp = []
LuCornerUpLeft = []
LuCornerUpRight = []
LuCpu = []
LuCreativeCommons = []
LuCreditCard = []
LuCroissant = []
LuCrop = []
LuCross = []
LuCrosshair = []
LuCrown = []
LuCupSoda = []
LuCurrency = []
LuDatabase = []
LuDatabaseBackup = []
LuDelete = []
LuDessert = []
LuDiamond = []
LuDice1 = []
LuDice2 = []
LuDice3 = []
LuDice4 = []
LuDice5 = []
LuDice6 = []
LuDices = []
LuDiff = []
LuDisc = []
LuDisc2 = []
LuDisc3 = []
LuDivide = []
LuDivideCircle = []
LuDivideSquare = []
LuDna = []
LuDnaOff = []
LuDog = []
LuDollarSign = []
LuDonut = []
LuDoorClosed = []
LuDoorOpen = []
LuDot = []
LuDownload = []
LuDownloadCloud = []
LuDribbble = []
LuDroplet = []
LuDroplets = []
LuDrumstick = []
LuDumbbell = []
LuEar = []
LuEarOff = []
LuEgg = []
LuEggFried = []
LuEggOff = []
LuEqual = []
LuEqualNot = []
LuEraser = []
LuEuro = []
LuExpand = []
LuExternalLink = []
LuEye = []
LuEyeOff = []
LuFacebook = []
LuFactory = []
LuFan = []
LuFastForward = []
LuFeather = []
LuFerrisWheel = []
LuFigma = []
LuFile = []
LuFileArchive = []
LuFileAudio = []
LuFileAudio2 = []
LuFileAxis3d = []
LuFileBadge = []
LuFileBadge2 = []
LuFileBarChart = []
LuFileBarChart2 = []
LuFileBox = []
LuFileCheck = []
LuFileCheck2 = []
LuFileClock = []
LuFileCode = []
LuFileCode2 = []
LuFileCog = []
LuFileCog2 = []
LuFileDiff = []
LuFileDigit = []
LuFileDown = []
LuFileEdit = []
LuFileHeart = []
LuFileImage = []
LuFileInput = []
LuFileJson = []
LuFileJson2 = []
LuFileKey = []
LuFileKey2 = []
LuFileLineChart = []
LuFileLock = []
LuFileLock2 = []
LuFileMinus = []
LuFileMinus2 = []
LuFileOutput = []
LuFilePieChart = []
LuFilePlus = []
LuFilePlus2 = []
LuFileQuestion = []
LuFileScan = []
LuFileSearch = []
LuFileSearch2 = []
LuFileSignature = []
LuFileSpreadsheet = []
LuFileStack = []
LuFileSymlink = []
LuFileTerminal = []
LuFileText = []
LuFileType = []
LuFileType2 = []
LuFileUp = []
LuFileVideo = []
LuFileVideo2 = []
LuFileVolume = []
LuFileVolume2 = []
LuFileWarning = []
LuFileX = []
LuFileX2 = []
LuFiles = []
LuFilm = []
LuFilter = []
LuFilterX = []
LuFingerprint = []
LuFish = []
LuFishOff = []
LuFishSymbol = []
LuFlag = []
LuFlagOff = []
LuFlagTriangleLeft = []
LuFlagTriangleRight = []
LuFlame = []
LuFlashlight = []
LuFlashlightOff = []
LuFlaskConical = []
LuFlaskConicalOff = []
LuFlaskRound = []
LuFlipHorizontal = []
LuFlipHorizontal2 = []
LuFlipVertical = []
LuFlipVertical2 = []
LuFlower = []
LuFlower2 = []
LuFocus = []
LuFoldHorizontal = []
LuFoldVertical = []
LuFolder = []
LuFolderArchive = []
LuFolderCheck = []
LuFolderClock = []
LuFolderClosed = []
LuFolderCog = []
LuFolderCog2 = []
LuFolderDot = []
LuFolderDown = []
LuFolderEdit = []
LuFolderGit = []
LuFolderGit2 = []
LuFolderHeart = []
LuFolderInput = []
LuFolderKanban = []
LuFolderKey = []
LuFolderLock = []
LuFolderMinus = []
LuFolderOpen = []
LuFolderOpenDot = []
LuFolderOutput = []
LuFolderPlus = []
LuFolderRoot = []
LuFolderSearch = []
LuFolderSearch2 = []
LuFolderSymlink = []
LuFolderSync = []
LuFolderTree = []
LuFolderUp = []
LuFolderX = []
LuFolders = []
LuFootprints = []
LuForklift = []
LuFormInput = []
LuForward = []
LuFrame = []
LuFramer = []
LuFrown = []
LuFuel = []
LuFunctionSquare = []
LuGalleryHorizontal = []
LuGalleryHorizontalEnd = []
LuGalleryThumbnails = []
LuGalleryVertical = []
LuGalleryVerticalEnd = []
LuGamepad = []
LuGamepad2 = []
LuGanttChart = []
LuGanttChartSquare = []
LuGauge = []
LuGaugeCircle = []
LuGavel = []
LuGem = []
LuGhost = []
LuGift = []
LuGitBranch = []
LuGitBranchPlus = []
LuGitCommit = []
LuGitCompare = []
LuGitFork = []
LuGitMerge = []
LuGitPullRequest = []
LuGitPullRequestClosed = []
LuGitPullRequestDraft = []
LuGithub = []
LuGitlab = []
LuGlassWater = []
LuGlasses = []
LuGlobe = []
LuGlobe2 = []
LuGoal = []
LuGrab = []
LuGraduationCap = []
LuGrape = []
LuGrid2x2 = []
LuGrid3x3 = []
LuGrip = []
LuGripHorizontal = []
LuGripVertical = []
LuGroup = []
LuHammer = []
LuHand = []
LuHandMetal = []
LuHardDrive = []
LuHardDriveDownload = []
LuHardDriveUpload = []
LuHardHat = []
LuHash = []
LuHaze = []
LuHdmiPort = []
LuHeading = []
LuHeading1 = []
LuHeading2 = []
LuHeading3 = []
LuHeading4 = []
LuHeading5 = []
LuHeading6 = []
LuHeadphones = []
LuHeart = []
LuHeartCrack = []
LuHeartHandshake = []
LuHeartOff = []
LuHeartPulse = []
LuHelpCircle = []
LuHelpingHand = []
LuHexagon = []
LuHighlighter = []
LuHistory = []
LuHome = []
LuHop = []
LuHopOff = []
LuHotel = []
LuHourglass = []
LuIceCream = []
LuIceCream2 = []
LuImage = []
LuImageMinus = []
LuImageOff = []
LuImagePlus = []
LuImport = []
LuInbox = []
LuIndent = []
LuIndianRupee = []
LuInfinity = []
LuInfo = []
LuInspect = []
LuInstagram = []
LuItalic = []
LuIterationCcw = []
LuIterationCw = []
LuJapaneseYen = []
LuJoystick = []
LuKanban = []
LuKanbanSquare = []
LuKanbanSquareDashed = []
LuKey = []
LuKeyRound = []
LuKeySquare = []
LuKeyboard = []
LuLamp = []
LuLampCeiling = []
LuLampDesk = []
LuLampFloor = []
LuLampWallDown = []
LuLampWallUp = []
LuLandmark = []
LuLanguages = []
LuLaptop = []
LuLaptop2 = []
LuLasso = []
LuLassoSelect = []
LuLaugh = []
LuLayers = []
LuLayout = []
LuLayoutDashboard = []
LuLayoutGrid = []
LuLayoutList = []
LuLayoutPanelLeft = []
LuLayoutPanelTop = []
LuLayoutTemplate = []
LuLeaf = []
LuLeafyGreen = []
LuLibrary = []
LuLifeBuoy = []
LuLigature = []
LuLightbulb = []
LuLightbulbOff = []
LuLineChart = []
LuLink = []
LuLink2 = []
LuLink2Off = []
LuLinkedin = []
LuList = []
LuListChecks = []
LuListEnd = []
LuListFilter = []
LuListMinus = []
LuListMusic = []
LuListOrdered = []
LuListPlus = []
LuListRestart = []
LuListStart = []
LuListTodo = []
LuListTree = []
LuListVideo = []
LuListX = []
LuLoader = []
LuLoader2 = []
LuLocate = []
LuLocateFixed = []
LuLocateOff = []
LuLock = []
LuLogIn = []
LuLogOut = []
LuLollipop = []
LuLuggage = []
LuMSquare = []
LuMagnet = []
LuMail = []
LuMailCheck = []
LuMailMinus = []
LuMailOpen = []
LuMailPlus = []
LuMailQuestion = []
LuMailSearch = []
LuMailWarning = []
LuMailX = []
LuMailbox = []
LuMails = []
LuMap = []
LuMapPin = []
LuMapPinOff = []
LuMartini = []
LuMaximize = []
LuMaximize2 = []
LuMedal = []
LuMegaphone = []
LuMegaphoneOff = []
LuMeh = []
LuMemoryStick = []
LuMenu = []
LuMenuSquare = []
LuMerge = []
LuMessageCircle = []
LuMessageSquare = []
LuMessageSquareDashed = []
LuMessageSquarePlus = []
LuMessagesSquare = []
LuMic = []
LuMic2 = []
LuMicOff = []
LuMicroscope = []
LuMicrowave = []
LuMilestone = []
LuMilk = []
LuMilkOff = []
LuMinimize = []
LuMinimize2 = []
LuMinus = []
LuMinusCircle = []
LuMinusSquare = []
LuMonitor = []
LuMonitorCheck = []
LuMonitorDot = []
LuMonitorDown = []
LuMonitorOff = []
LuMonitorPause = []
LuMonitorPlay = []
LuMonitorSmartphone = []
LuMonitorSpeaker = []
LuMonitorStop = []
LuMonitorUp = []
LuMonitorX = []
LuMoon = []
LuMoonStar = []
LuMoreHorizontal = []
LuMoreVertical = []
LuMountain = []
LuMountainSnow = []
LuMouse = []
LuMousePointer = []
LuMousePointer2 = []
LuMousePointerClick = []
LuMove = []
LuMove3d = []
LuMoveDiagonal = []
LuMoveDiagonal2 = []
LuMoveDown = []
LuMoveDownLeft = []
LuMoveDownRight = []
LuMoveHorizontal = []
LuMoveLeft = []
LuMoveRight = []
LuMoveUp = []
LuMoveUpLeft = []
LuMoveUpRight = []
LuMoveVertical = []
LuMusic = []
LuMusic2 = []
LuMusic3 = []
LuMusic4 = []
LuNavigation = []
LuNavigation2 = []
LuNavigation2Off = []
LuNavigationOff = []
LuNetwork = []
LuNewspaper = []
LuNfc = []
LuNut = []
LuNutOff = []
LuOctagon = []
LuOption = []
LuOrbit = []
LuOutdent = []
LuPackage = []
LuPackage2 = []
LuPackageCheck = []
LuPackageMinus = []
LuPackageOpen = []
LuPackagePlus = []
LuPackageSearch = []
LuPackageX = []
LuPaintBucket = []
LuPaintbrush = []
LuPaintbrush2 = []
LuPalette = []
LuPalmtree = []
LuPanelBottom = []
LuPanelBottomClose = []
LuPanelBottomInactive = []
LuPanelBottomOpen = []
LuPanelLeft = []
LuPanelLeftClose = []
LuPanelLeftInactive = []
LuPanelLeftOpen = []
LuPanelRight = []
LuPanelRightClose = []
LuPanelRightInactive = []
LuPanelRightOpen = []
LuPanelTop = []
LuPanelTopClose = []
LuPanelTopInactive = []
LuPanelTopOpen = []
LuPaperclip = []
LuParentheses = []
LuParkingCircle = []
LuParkingCircleOff = []
LuParkingMeter = []
LuParkingSquare = []
LuParkingSquareOff = []
LuPartyPopper = []
LuPause = []
LuPauseCircle = []
LuPauseOctagon = []
LuPawPrint = []
LuPcCase = []
LuPen = []
LuPenLine = []
LuPenSquare = []
LuPenTool = []
LuPencil = []
LuPencilLine = []
LuPencilRuler = []
LuPercent = []
LuPersonStanding = []
LuPhone = []
LuPhoneCall = []
LuPhoneForwarded = []
LuPhoneIncoming = []
LuPhoneMissed = []
LuPhoneOff = []
LuPhoneOutgoing = []
LuPi = []
LuPiSquare = []
LuPictureInPicture = []
LuPictureInPicture2 = []
LuPieChart = []
LuPiggyBank = []
LuPilcrow = []
LuPilcrowSquare = []
LuPill = []
LuPin = []
LuPinOff = []
LuPipette = []
LuPizza = []
LuPlane = []
LuPlaneLanding = []
LuPlaneTakeoff = []
LuPlay = []
LuPlayCircle = []
LuPlaySquare = []
LuPlug = []
LuPlug2 = []
LuPlugZap = []
LuPlugZap2 = []
LuPlus = []
LuPlusCircle = []
LuPlusSquare = []
LuPocket = []
LuPocketKnife = []
LuPodcast = []
LuPointer = []
LuPopcorn = []
LuPopsicle = []
LuPoundSterling = []
LuPower = []
LuPowerOff = []
LuPresentation = []
LuPrinter = []
LuProjector = []
LuPuzzle = []
LuQrCode = []
LuQuote = []
LuRabbit = []
LuRadar = []
LuRadiation = []
LuRadio = []
LuRadioReceiver = []
LuRadioTower = []
LuRailSymbol = []
LuRainbow = []
LuRat = []
LuRatio = []
LuReceipt = []
LuRectangleHorizontal = []
LuRectangleVertical = []
LuRecycle = []
LuRedo = []
LuRedo2 = []
LuRedoDot = []
LuRefreshCcw = []
LuRefreshCcwDot = []
LuRefreshCw = []
LuRefreshCwOff = []
LuRefrigerator = []
LuRegex = []
LuRemoveFormatting = []
LuRepeat = []
LuRepeat1 = []
LuRepeat2 = []
LuReplace = []
LuReplaceAll = []
LuReply = []
LuReplyAll = []
LuRewind = []
LuRocket = []
LuRockingChair = []
LuRollerCoaster = []
LuRotate3d = []
LuRotateCcw = []
LuRotateCw = []
LuRouter = []
LuRows = []
LuRss = []
LuRuler = []
LuRussianRuble = []
LuSailboat = []
LuSalad = []
LuSandwich = []
LuSatellite = []
LuSatelliteDish = []
LuSave = []
LuSaveAll = []
LuScale = []
LuScale3d = []
LuScaling = []
LuScan = []
LuScanFace = []
LuScanLine = []
LuScatterChart = []
LuSchool = []
LuSchool2 = []
LuScissors = []
LuScissorsLineDashed = []
LuScissorsSquare = []
LuScissorsSquareDashedBottom = []
LuScreenShare = []
LuScreenShareOff = []
LuScroll = []
LuScrollText = []
LuSearch = []
LuSearchCheck = []
LuSearchCode = []
LuSearchSlash = []
LuSearchX = []
LuSend = []
LuSendHorizonal = []
LuSendToBack = []
LuSeparatorHorizontal = []
LuSeparatorVertical = []
LuServer = []
LuServerCog = []
LuServerCrash = []
LuServerOff = []
LuSettings = []
LuSettings2 = []
LuShapes = []
LuShare = []
LuShare2 = []
LuSheet = []
LuShell = []
LuShield = []
LuShieldAlert = []
LuShieldCheck = []
LuShieldClose = []
LuShieldOff = []
LuShieldQuestion = []
LuShip = []
LuShipWheel = []
LuShirt = []
LuShoppingBag = []
LuShoppingBasket = []
LuShoppingCart = []
LuShovel = []
LuShowerHead = []
LuShrink = []
LuShrub = []
LuShuffle = []
LuSigma = []
LuSigmaSquare = []
LuSignal = []
LuSignalHigh = []
LuSignalLow = []
LuSignalMedium = []
LuSignalZero = []
LuSiren = []
LuSkipBack = []
LuSkipForward = []
LuSkull = []
LuSlack = []
LuSlice = []
LuSliders = []
LuSlidersHorizontal = []
LuSmartphone = []
LuSmartphoneCharging = []
LuSmartphoneNfc = []
LuSmile = []
LuSmilePlus = []
LuSnail = []
LuSnowflake = []
LuSofa = []
LuSoup = []
LuSpace = []
LuSpade = []
LuSparkle = []
LuSparkles = []
LuSpeaker = []
LuSpellCheck = []
LuSpellCheck2 = []
LuSpline = []
LuSplit = []
LuSplitSquareHorizontal = []
LuSplitSquareVertical = []
LuSprayCan = []
LuSprout = []
LuSquare = []
LuSquareAsterisk = []
LuSquareCode = []
LuSquareDashedBottom = []
LuSquareDashedBottomCode = []
LuSquareDot = []
LuSquareEqual = []
LuSquareSlash = []
LuSquareStack = []
LuSquirrel = []
LuStamp = []
LuStar = []
LuStarHalf = []
LuStarOff = []
LuStepBack = []
LuStepForward = []
LuStethoscope = []
LuSticker = []
LuStickyNote = []
LuStopCircle = []
LuStore = []
LuStretchHorizontal = []
LuStretchVertical = []
LuStrikethrough = []
LuSubscript = []
LuSubtitles = []
LuSun = []
LuSunDim = []
LuSunMedium = []
LuSunMoon = []
LuSunSnow = []
LuSunrise = []
LuSunset = []
LuSuperscript = []
LuSwissFranc = []
LuSwitchCamera = []
LuSword = []
LuSwords = []
LuSyringe = []
LuTable = []
LuTable2 = []
LuTableProperties = []
LuTablet = []
LuTablets = []
LuTag = []
LuTags = []
LuTally1 = []
LuTally2 = []
LuTally3 = []
LuTally4 = []
LuTally5 = []
LuTarget = []
LuTent = []
LuTerminal = []
LuTerminalSquare = []
LuTestTube = []
LuTestTube2 = []
LuTestTubes = []
LuText = []
LuTextCursor = []
LuTextCursorInput = []
LuTextQuote = []
LuTextSelect = []
LuThermometer = []
LuThermometerSnowflake = []
LuThermometerSun = []
LuThumbsDown = []
LuThumbsUp = []
LuTicket = []
LuTimer = []
LuTimerOff = []
LuTimerReset = []
LuToggleLeft = []
LuToggleRight = []
LuTornado = []
LuTouchpad = []
LuTouchpadOff = []
LuTowerControl = []
LuToyBrick = []
LuTractor = []
LuTrafficCone = []
LuTrainFront = []
LuTrainFrontTunnel = []
LuTrainTrack = []
LuTramFront = []
LuTrash = []
LuTrash2 = []
LuTreeDeciduous = []
LuTreePine = []
LuTrees = []
LuTrello = []
LuTrendingDown = []
LuTrendingUp = []
LuTriangle = []
LuTriangleRight = []
LuTrophy = []
LuTruck = []
LuTurtle = []
LuTv = []
LuTv2 = []
LuTwitch = []
LuTwitter = []
LuType = []
LuUmbrella = []
LuUnderline = []
LuUndo = []
LuUndo2 = []
LuUndoDot = []
LuUnfoldHorizontal = []
LuUnfoldVertical = []
LuUngroup = []
LuUnlink = []
LuUnlink2 = []
LuUnlock = []
LuUnplug = []
LuUpload = []
LuUploadCloud = []
LuUsb = []
LuUser = []
LuUser2 = []
LuUserCheck = []
LuUserCheck2 = []
LuUserCircle = []
LuUserCircle2 = []
LuUserCog = []
LuUserCog2 = []
LuUserMinus = []
LuUserMinus2 = []
LuUserPlus = []
LuUserPlus2 = []
LuUserSquare = []
LuUserSquare2 = []
LuUserX = []
LuUserX2 = []
LuUsers = []
LuUsers2 = []
LuUtensils = []
LuUtensilsCrossed = []
LuUtilityPole = []
LuVariable = []
LuVegan = []
LuVenetianMask = []
LuVibrate = []
LuVibrateOff = []
LuVideo = []
LuVideoOff = []
LuVideotape = []
LuView = []
LuVoicemail = []
LuVolume = []
LuVolume1 = []
LuVolume2 = []
LuVolumeX = []
LuVote = []
LuWallet = []
LuWallet2 = []
LuWalletCards = []
LuWallpaper = []
LuWand = []
LuWand2 = []
LuWarehouse = []
LuWatch = []
LuWaves = []
LuWebcam = []
LuWebhook = []
LuWheat = []
LuWheatOff = []
LuWholeWord = []
LuWifi = []
LuWifiOff = []
LuWind = []
LuWine = []
LuWineOff = []
LuWorkflow = []
LuWrapText = []
LuWrench = []
LuX = []
LuXCircle = []
LuXOctagon = []
LuXSquare = []
LuYoutube = []
LuZap = []
LuZapOff = []
LuZoomIn = []
LuZoomOut = []
