[package]
name = "icondata_macros"
version = "0.1.0"
edition = "2021"
authors = ["Charles Edward Gagnon"]
license = "MIT"

description = "A helper macro to specify icons in a declarative way."
keywords = ["icons", "svg", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
