[package]
name = "icondata_macros"
version = "0.1.4"
edition = "2021"
authors = ["Charles Edward Gagnon"]
license = "MIT"
repository = "https://github.com/Carlosted/icondata"

description = "A helper macro to specify icons in a declarative way."
keywords = ["icons", "svg", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
icondata = { path = "../icondata", features = ["AiFileImageTwotone", "macros"] }
